--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    list-style: none;
-    scroll-behavior: smooth;
+    list-style-type: none;
     text-decoration: none;
     font-family: 'Indie Flower', cursive;
     font-family: 'Poppins', sans-serif;
@@ -12,11 +11,17 @@
     --bg-color:#1f242d;
     --sec-color:#323946;
     --text-color:#fff;
-    --main-color: #0ef;
+    --main-color: #00eeff;
 }
 body{
     background:var(--bg-color);
     color:var(--text-color);
+}
+.wrapper{
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    perspective: 10px;
 }
 .header{
     display: flex;
@@ -25,7 +30,6 @@ body{
     font-size: 1rem;
     background:var(--bg-color);
 }
-
 .logo{
     color:var(--text-color);
     font-weight: 900;
@@ -36,19 +40,50 @@ body{
 .nav{
     display: flex;
     padding: 15px;
+    border-radius: 8px;
+    padding-left: 0;
+    padding-right: 0;
 }
 .nav li{
     text-transform:uppercase;
-
 }
 .nav a{
+    position: relative;
     color:var(--text-color);
-    padding:1rem 2rem;
+    padding:0.8rem 2.5rem;
     font-weight: 600;
-
+    z-index: 1;
+    height: 100%;
+    margin: 0;
 }
-.nav a:hover{
-    color:var(--main-color);
+.nav a:hover,.nav .active
+{
+    color: var(--main-color);
+}
+.nav a span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-bottom: 5px solid var(--main-color);
+    border-radius: 10px;
+    transform: scale(0) translateY(50px);
+    opacity: 0.5;
+    transition: .5s;
+    color: var(--text-color);
+}
+.nav a:hover span,
+.nav .active span{
+    transform: scale(1) translateY(0);
+    opacity: 1;
+}
+#menu-icon{
+    font-size: 3.2rem;
+    color: var(--text-color);
+    cursor: pointer;
+    display: none;
 }
 p{
     padding:20px 20px;
@@ -63,26 +98,39 @@ p{
     display:flex;
     /* align-items: center; */
     justify-content: center;
+    /* transform: translateZ(-12px) scale(1.5); */
+}
+.home .info{
+    width: 50%;
+    padding-left: 1vw;
 }
 .home h1{
     font-size: 4rem;
     font-weight: 3000;
+    /* line-height: 2rem; */
     /* text-align: center; */
 }
 .home h3{
     font-size: 2rem;
     /* text-align: center; */
     font-weight: 1500;
-
-}
-span{
-    color:var(--main-color);
-
 }
 .home h5{
     font-weight: lighter;
     padding-top: 2rem;
     font-size: 1rem;
+}
+
+@keyframes float{
+    0%{
+        transform: translateY(-10px);
+    }
+    50%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(-10px);
+    }
 }
 .home img{
     width: 20rem;
@@ -90,23 +138,43 @@ span{
     border-radius: 10rem;
     box-shadow: 0 0 2rem var(--main-color);
     margin-left: 10rem;
-
+    animation: float 3s linear infinite;
+}
+.text{
+    display: inline-block;
+}
+.text-animate{
+    color: var(--main-color);
+    margin-bottom: -.4em;
+    border-right: 2px solid var(--main-color);
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: 
+        typing 4s steps(22) infinite alternate-reverse,
+        cursor .4s step-end infinite alternate;
+}
+@keyframes cursor{
+    50% {border-color: transparent}
+}
+@keyframes typing{
+    from {width: 0}
+    to{width:110%}
 }
 .btn{
+    position: relative;
     display: inline-block;
     background: var(--main-color);
-    border-radius: 1rem;
+    border-radius: .5rem;
+    border: .2rem solid var(--main-color);
     padding:0.6rem 1rem;
     margin-top: 2rem;
     color:var(--sec-color);
     font-weight: bold;
-    box-shadow: 0 0 1rem var(--main-color);
-    transition: .6s;
+    /* box-shadow: 0 0 1rem var(--main-color); */
+    /* transition: .6s; */
 }
-.btn:hover{
-    box-shadow: 0 0 2rem var(--main-color);
-    
-}
+
 .aboutme{
     /* margin:1rem 1rem; */
     padding-bottom: 5rem;
@@ -116,6 +184,12 @@ span{
     flex-direction: column;
     align-items: center;
     background: var(--sec-color);
+}
+.about{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 1rem;
 }
 .aboutme h2{
     font-size: 3rem;
@@ -135,12 +209,64 @@ span{
 }
 .content .about{
     padding-left: 5%;
+    font-size: 1.5vw;
+    width: 100%;
 }
 .content h3{
     font-weight: 1000;
     font-size: 2rem;
     text-align: center;
     color: var(--text-color);
+}
+.myskills{
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    flex-direction: column;
+    /* gap: 1vw; */
+}
+.skills-content{
+    display: flex;
+    align-items: flex-start;
+    /* justify-content: center; */
+    flex-direction: column;
+    /* gap: 1vw; */
+    border: .2rem solid var(--main-color);
+    padding: .5rem 1.5rem;
+    /* width: 60vw; */
+
+}
+.skills-content .progress{
+    padding: 1rem 0;
+}
+.skills-content .progress h4{
+    display: flex;
+    justify-content: space-between;
+}
+.skills-content .progress .bar{
+    border: .2rem solid var(--main-color);
+    padding: .5rem;
+    height: 2rem;
+    width: 25rem;
+    border-radius: .5rem;
+}
+.skills-content .progress .bar span{
+    display: block;
+    height: 100%;
+    border-radius: .3rem;
+    background: var(--main-color);
+}
+.skills-content .progress:nth-child(1) .bar span{
+    width: 90%;
+}
+.skills-content .progress:nth-child(2) .bar span{
+    width: 80%;
+}
+.skills-content .progress:nth-child(3) .bar span{
+    width: 70%;
+}
+.skills-content .progress:nth-child(4) .bar span{
+    width: 55%;
 }
 .skill{
     display: grid;
@@ -166,14 +292,15 @@ span{
     text-align: center;
     font-weight: 3000;
 }
+
 .container .project{
     display: flex;
     /* align-items: center; */
     justify-content: center;
 }
 .project img{
-    width:30rem;
-    height: 20rem;
+    width:20rem;
+    height: 15rem;
     margin: 5rem 4rem;
     box-shadow: 0 0 1rem var(--main-color);
 } 
@@ -210,48 +337,37 @@ span{
     padding-top: 1.7rem;
     font-size: 1rem;
 }
-.contact form{
-    border-radius: 2rem;
-    margin-top: 3rem;
-    padding-top: 0.2rem;
-    padding-bottom: 2rem;
-    width: 50vw;
-    height: 100vh;
-    background:linear-gradient(var(--bg-color),rgba(196, 195, 195, 0.2));
+.box{
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
+    gap: 1.5vw;
+    margin: 2rem;
 }
-form label{
-    font-weight: 800;
-    font-size: 1.5rem;
-    color: var(--text-color);
-    padding: 1rem 2rem;
+.input_1{
+    display: flex;
+    gap: 1vw;
 }
-form input{
-    padding: 1rem 1rem;
-    margin-left: 2rem;
-    margin-right: 4rem;
-    outline-color:var(--main-color);
+.input_2{
+    display: flex;
+    gap: 1vw;
 }
-form input::placeholder{
-    font-size: 1rem;
-}
-textarea{
-    padding: 1rem 1rem;
-    margin-left: 2rem;
-    margin-right: 4rem;
-    font-size: 1rem;
-}
-textarea::placeholder{
-    font-size: 1rem;
+input, textarea{
+    background-color: transparent;
+    padding: .8rem 1rem;
+    /* border: .2rem solid var(--main-color); */
+    border-radius: .2rem;
 }
 input[type="submit"]{
-    margin-left: 15rem;
-    margin-right: 15rem;
+    margin: 0;
 }
 hr{
     margin-top: 0.5rem;
     border-top: 0.3rem solid var(--main-color);
     width:2.7rem;
     border-radius: 1rem;
+}
+span{
+    color: var(--main-color);
 }
